--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "angular2-token": "^0.2.0-beta.8",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "ng2-cloudinary": "^0.9.2",
     "rxjs": "^5.1.0",
     "typescript": "^2.3.2",
     "zone.js": "^0.8.4"
